Prod V2/main/default/objects/Invoice__c/fields/Amount_due__c.field-meta.xml
<CustomField>
    <fullName>Amount_due__c</fullName>
    <description>Comes From Odoo</description>
    <label>Amount due</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>