Prod V2/main/default/objects/Invoice__c/fields/Customer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>