Prod V2/main/default/objects/Invoice__c/fields/Customer_ref__c.field-meta.xml
<CustomField>
    <fullName>Customer_ref__c</fullName>
    <description>Comes From Odoo</description>
    <label>Customer ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>