Prod V2/main/default/objects/Invoice__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>Comes From Odoo</description>
    <label>End date</label>
    <type>Date</type>
</CustomField>