Prod V2/main/default/objects/Invoice__c/fields/Payment_state__c.field-meta.xml
<CustomField>
    <fullName>Payment_state__c</fullName>
    <description>Comes From Odoo</description>
    <label>Payment state</label>
    <length>200</length>
    <type>Text</type>
</CustomField>