Prod V2/main/default/objects/Invoice__c/fields/Price_list_id__c.field-meta.xml
<CustomField>
    <fullName>Price_list_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Comes From Odoo</description>
    <label>Price list id</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>