Prod V2/main/default/objects/Invoice__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>Comes From Odoo</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>