Prod V2/main/default/objects/Invoice__c/fields/Tax_excluded__c.field-meta.xml
<CustomField>
    <fullName>Tax_excluded__c</fullName>
    <description>Comes From Odoo</description>
    <label>Tax excluded</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>