Prod V2/main/default/objects/Invoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Comes From Odoo</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>